--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,11 @@ version: '3.8'
 services:
   ftp-server:
     environment:
-      - FTP_PASS=12345678
-      - FTP_USER=user
-    image: garethflowers/ftp-server
+      - USERS="user|1234"
+    image: delfer/alpine-ftp-server
     ports:
-      - '20-21:20-21/tcp'
-      - '40000-40009:40000-40009/tcp' # Only needed for passive mode
+      - 21:21
+      - 21000-21010:21000-21010
     volumes:
       - ${MEDIA_LIBRARY_PATH}:/home/user
 
